# lattice-aggregation

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml
demo/: README.md  run_demo.sh
examples/: validator_localnet.rs
schemas/: real-6667-of-10000-mldsa-campaign-evidence-v1.schema.json  real-6667-of-10000-mldsa-campaign-prerequisites-v1.schema.json  real-6667-of-10000-mldsa-capability-evidence-v1.schema.json
script_tests/: test_assess_internal_theorem_closure.py  test_assess_lattice_hypothesis.py  test_assess_theorem_closure_readiness.py  test_build_backend_emission_request.py  test_build_internal_aggregation_campaign_request.py  test_build_internal_theorem_closure_bundle.py  test_build_internal_theorem_closure_criterion_inputs.py  test_build_nonce_producer_request.py  test_build_p1_external_backend_cryptographic_closure_candidate.py  test_build_p1_external_backend_review_packages.py  test_build_p1_full_kat_cavp_validation_review.py  test_build_p1_rejection_distribution_preservation_review.py  test_build_p1_theorem_linkage_review.py  test_build_theorem_closure_blocker_requests.py  test_build_theorem_closure_review_manifest.py  test_check_nonce_producer_backend_readiness.py  test_ci_workflow.py  test_model_distributed_mask_mpc_feasibility.py  test_run_admissible_nonce_producer_capture_attempt.py  test_run_backend_emission_capture.py  test_run_hazmat_rejection_equivalence_batch.py  test_run_hazmat_threshold_backend_capture.py  test_run_internal_aggregation_campaign_capture.py  test_run_internal_theorem_closure_attempt.py  test_run_localnet_runner.py  test_run_nonce_producer_capture.py  test_run_nonce_producer_handoff_replay.py  test_run_p1_external_backend_evidence_attempt.py  test_run_simulation_benchmarks.py  test_scaffold_p1_external_backend_workspace.py  test_stage_external_backend_emission_capture.py  test_stage_external_nonce_producer_capture.py  test_threshold_authorization_verifier.py  test_threshold_backend_p1.py  test_validate_internal_aggregation_campaign_capture.py  test_verify_actual_nonce_producer_capture.py
scripts/: assess_internal_theorem_closure.py  assess_lattice_hypothesis.py  assess_theorem_closure_readiness.py  build_backend_emission_request.py  build_exact_expandmask_mpc_candidate.py  build_external_review_freeze_bundle.py  build_internal_aggregation_campaign_request.py  build_internal_theorem_closure_bundle.py  build_internal_theorem_closure_criterion_inputs.py  build_nonce_producer_request.py  build_p1_external_backend_cryptographic_closure_candidate.py  build_p1_external_backend_review_packages.py  build_p1_full_kat_cavp_validation_review.py  build_p1_rejection_distribution_preservation_review.py  build_p1_theorem_linkage_review.py  build_theorem_closure_blocker_requests.py  build_theorem_closure_review_manifest.py  check_nonce_producer_backend_readiness.py  emit_reviewed_nonce_producer_capture.py  import_expandmask_attempt.py  model_distributed_mask_mpc_feasibility.py  model_fst_algebra_check.py  model_fst_l12_committee_cost.py  model_fst_t5_boundaries.py  p1_nonce_producer_reference_cli.py  reproduce-section-v.sh  run_admissible_nonce_producer_capture_attempt.py  run_backend_emission_capture.py  run_localnet_runner.py  (+20 more)
(+592 files in other folders)
