[package]
name = "dytallix-pq-threshold"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Research-grade threshold ML-DSA-65 API boundary and simulation backend"
repository = "https://github.com/exocognosis/lattice-aggregation"
homepage = "https://github.com/exocognosis/lattice-aggregation"
readme = "README.md"
keywords = ["post-quantum", "threshold", "mldsa", "lattice", "signatures"]
categories = ["cryptography", "simulation"]

[lib]
name = "dytallix_pq_threshold"
path = "src/lib.rs"

[features]
default = ["simulated"]
simulated = []
hazmat = []
hazmat-real-mldsa = ["hazmat"]
experimental-vss = []

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
ml-dsa = "0.1"
serde_json = "1"
trybuild = "1"
