[package]
name = "lattice-aggregation"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Audit-oriented threshold ML-DSA-65 protocol boundary and reviewed nonce-producer handoff profile"
repository = "https://github.com/exocognosis/lattice-aggregation"
homepage = "https://github.com/exocognosis/lattice-aggregation"
readme = "README.md"
keywords = ["post-quantum", "threshold", "mldsa", "lattice", "signatures"]
categories = ["cryptography"]

[lib]
name = "lattice_aggregation"
path = "src/lib.rs"

[features]
default = []
protocol-sim = []
raw-mldsa-internals = []
raw-real-mldsa = ["raw-mldsa-internals", "dep:ml-dsa"]
coordinator-assisted = []
production-mldsa65-coordinator = ["coordinator-assisted", "raw-real-mldsa"]

[dependencies]
async-trait = "0.1"
ml-dsa = { version = "0.1.1", optional = true, default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
trybuild = "1"
